--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
     {% if page.description %}
     <meta name="description" content="{{ page.description }}" />
     {% endif %}
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta charset="utf-8">
     <link rel="stylesheet" media="screen" href="/stylesheets/screen.css" type="text/css" />
     {% if site.feedburner %}
     <link href="http://feeds.feedburner.com/{{ site.feedburner.id }}" rel="alternate" title="{{ site.title }}" type="application/atom+xml" />
@@ -25,18 +25,17 @@
     {% endif %}
   </head>
   <body>
-    <div id="page">
-      <div id="header">
+      <header>
         <a href="/"><h1>{{ site.title }}</h1></a>
-      </div>
-      <div id="body">
+      </header>
+      <div class="container">
         {% if page.title %}<h1>{{ page.title }}</h1>{% endif %}
         {{ content }}
       </div>
-    </div>
-
+    <footer>
   {% if site.github %}
     <a href="http://github.com/{{ site.github.username }}"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub" /></a>
-  {% endif %}
+    {% endif %}
+    </footer>
   </body>
 </html>
