--- a/_sass/screen.scss
+++ b/_sass/screen.scss
@@ -1,4 +1,5 @@
 @import "mixins/syntax";
 @import "bootstrap";
+@import "bootstrap-responsive";
 
 // add your styles, see http://compass-style.org/
