--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,16 +26,37 @@
   </head>
   <body>
       <header>
-        <a href="/"><h1>{{ site.title }}</h1></a>
+        <div class="navbar navbar-inverse navbar-fixed-top">
+          <div class="navbar-inner">
+            <div class="container">
+             
+            <!-- .btn-navbar is used as the toggle for collapsed navbar content -->
+            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </a>
+             
+            <!-- Be sure to leave the brand out there if you want it shown -->
+            <a class="brand" href="#">{{ site.title }}</a>
+             
+            <!-- Everything you want hidden at 940px or less, place within here -->
+            <div class="nav-collapse collapse">
+            <!-- .nav, .navbar-search, .navbar-form, etc -->
+            </div>
+             
+            </div>
+          </div>
+        </div>
       </header>
       <div class="container">
         {% if page.title %}<h1>{{ page.title }}</h1>{% endif %}
         {{ content }}
       </div>
     <footer>
-  {% if site.github %}
-    <a href="http://github.com/{{ site.github.username }}"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub" /></a>
-    {% endif %}
+      {% if site.github %}
+      <a href="http://github.com/{{ site.github.username }}"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub" /></a>
+      {% endif %}
     </footer>
   </body>
 </html>
