--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,9 +36,14 @@
               <span class="icon-bar"></span>
             </a>
              
-            <a class="brand" href="#">{{ site.title }}</a>
+            <a class="brand" href="/">{{ site.title }}</a>
              
             <div class="nav-collapse collapse">
+              <ul class="nav">
+                <li class="active"><a href="#">Home</a></li>
+                <li><a href="#">Link</a></li>
+                <li><a href="#">Link</a></li>
+              </ul>
             </div>
              
             </div>
