--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -59,5 +59,7 @@
       <a href="http://github.com/{{ site.github.username }}"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub" /></a>
       {% endif %}
     </footer>
+    <script src="http://code.jquery.com/jquery.min.js"></script>
+    <script src="/javascripts/bootstrap.js" type="text/javascript"></script>
   </body>
 </html>
