--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
     {% endif %}
     <meta charset="utf-8">
     <link rel="stylesheet" media="screen" href="/stylesheets/screen.css" type="text/css" />
+    <link rel="stylesheet" media="screen" href="/stylesheets/solarizedlight.css" type="text/css" />
     {% if site.feedburner %}
     <link href="http://feeds.feedburner.com/{{ site.feedburner.id }}" rel="alternate" title="{{ site.title }}" type="application/atom+xml" />
     {% endif %}
@@ -60,6 +61,5 @@
       {% endif %}
     </footer>
     <script src="http://code.jquery.com/jquery.min.js"></script>
-    <script src="/javascripts/bootstrap.js" type="text/javascript"></script>
   </body>
 </html>
