--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,9 +41,8 @@
              
             <div class="nav-collapse collapse">
               <ul class="nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#">Link</a></li>
-                <li><a href="#">Link</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/a-propos.html">A propos</a></li>
               </ul>
             </div>
              
