--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,15 +3,15 @@ layout: default
 ---
 {% if page.date %}<span class="muted">Posted on {{ page.date | date_to_string }}{% if page.last_updated %}, last updated on {{ page.last_updated | date_to_string }}{% endif %}</span>{% endif %}
 
-<div class="post">
+<article>
 {{ content }}
-</div>
+</article>
  
 <div id="related">
   <h2>Related Posts</h2>
   <ul class="posts">
     {% for post in site.related_posts limit:5 %}
-      <li><span>{{ post.date | date_to_string }}</span> - <a href="{{ post.url }}">{{ post.title }}</a></li>
+      <li><a href="{{ post.url }}">{{ post.title }}</a> <small class="muted"> posté le {{ post.date | date_to_string }}</small></li>
     {% endfor %}
   </ul>
 </div>
