--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,7 +21,7 @@ layout: default
   <h2>Comments</h2>
   <div id="disqus_thread"></div>
   <script type="text/javascript">
-    var disqus_identifier = "{{ page.url }}";
+    var disqus_identifier = "{{ page.meta.dsq_thread_id }}";
     (function() {
      var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
      dsq.src = 'http://{{ site.disqus.id }}.disqus.com/embed.js';
