--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,5 +55,6 @@
         {{ content }}
       </div>
     <script src="http://code.jquery.com/jquery.min.js"></script>
+    <script src="/javascripts/bootstrap.min.js"></script>
   </body>
 </html>
