--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,44 +1,49 @@
 ---
 layout: default
 ---
-{% if page.date %}<span class="muted">Posted on {{ page.date | date_to_string }}{% if page.last_updated %}, last updated on {{ page.last_updated | date_to_string }}{% endif %}</span>{% endif %}
-<hr>
-<article>
-{{ content }}
-</article>
- 
-<div id="related">
-  <h3>Related Posts</h3>
-  <ul class="posts">
-    {% for post in site.related_posts limit:5 %}
-      <li><a href="{{ post.url }}">{{ post.title }}</a> <small class="muted"> posté le {{ post.date | date_to_string }}</small></li>
-    {% endfor %}
-  </ul>
+<div class="span2">
+  {% if page.date %}<span class="muted">Posted on {{ page.date | date_to_string }}{% if page.last_updated %}, last updated on {{ page.last_updated | date_to_string }}{% endif %}</span>{% endif %}
+</div>
+<div class="span8">
+  <article>
+  {{ content }}
+  </article>
+
+  <div>
+    <ul class="pager">
+      {% if page.previous %}
+      <li class="previous"><a href="{{ page.previous.url }}">&larr; {{ page.previous.title }}</a></li>
+      {% endif %}
+      {% if page.next %}
+      <li class="next"><a href="{{ page.next.url }}">{{ page.next.title }} &rarr;</a></li>
+      {% endif %}
+    </ul>
+  </div>
+
+  {% if site.disqus %}
+  <div id="comments">
+    <div id="disqus_thread"></div>
+    <script type="text/javascript">
+      var disqus_identifier = "{{ page.meta.dsq_thread_id ? page.meta.dsq_thread_id : page.url }}";
+      (function() {
+       var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+       dsq.src = 'http://{{ site.disqus.id }}.disqus.com/embed.js';
+       (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+      })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript={{ site.disqus.id }}">comments powered by Disqus.</a></noscript>
+    <a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a>
+  </div>
+  {% endif %}
 </div>
 
-<div>
-  <ul class="pager">
-    {% if page.previous %}
-    <li class="previous"><a href="{{ page.previous.url }}">&larr; {{ page.previous.title }}</a></li>
-    {% endif %}
-    {% if page.next %}
-    <li class="next"><a href="{{ page.next.url }}">{{ page.next.title }} &rarr;</a></li>
-    {% endif %}
-  </ul>
+<div class="span2">
+  <div id="related">
+    <h4>Related Posts</h4>
+    <ul class="posts">
+      {% for post in site.related_posts limit:5 %}
+        <li><small><a href="{{ post.url }}">{{ post.title }}</a> <span class="muted"> posté le {{ post.date | date_to_string }}</span></small></li>
+      {% endfor %}
+    </ul>
+  </div>
 </div>
-
-{% if site.disqus %}
-<div id="comments">
-  <div id="disqus_thread"></div>
-  <script type="text/javascript">
-    var disqus_identifier = "{{ page.meta.dsq_thread_id ? page.meta.dsq_thread_id : page.url }}";
-    (function() {
-     var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-     dsq.src = 'http://{{ site.disqus.id }}.disqus.com/embed.js';
-     (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-    })();
-  </script>
-  <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript={{ site.disqus.id }}">comments powered by Disqus.</a></noscript>
-  <a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a>
-</div>
-{% endif %}
