--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -61,8 +61,8 @@
       </header>
       <div class="container">
         <div class="row">
-          <div class="span8 offset2">
-            {% if page.title %}<h1>{{ page.title }}</h1>{% endif %}
+          <div class="span12">
+            {% if page.title %}<h1 class="text-center">{{ page.title }}</h1>{% endif %}
             <hr>
           </div>
         </div>
