--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -40,7 +40,7 @@ layout: default
 <div class="span2">
   <div id="related">
     <h4>Related Posts</h4>
-    <ul class="posts">
+    <ul class="unstyled">
       {% for post in site.related_posts limit:5 %}
         <li><small><a href="{{ post.url }}">{{ post.title }}</a> <span class="muted"> posté le {{ post.date | date_to_string }}</span></small></li>
       {% endfor %}
