--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,15 +60,15 @@
         </div>
       </header>
       <div class="container">
-        <div class="row content">
-          <div class="span12">
+        <div class="row">
+          <div class="span8 offset2 content">
             {% if page.title %}
             <h1 class="text-center">{{ page.title }}</h1>
             <hr>
             {% endif %}
           </div>
         </div>
-        <div class="row content">
+        <div class="row">
           {{ content }}
         </div>
       </div>
