--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,12 @@
 layout: default
 ---
 <div class="span2">
-  {% if page.date %}<span class="muted">Posted on {{ page.date | date_to_string }}{% if page.last_updated %}, last updated on {{ page.last_updated | date_to_string }}{% endif %}</span>{% endif %}
+  <div class="padding10 content aside">
+    {% if page.date %}<span class="muted">Posted on {{ page.date | date_to_string }}{% if page.last_updated %}, last updated on {{ page.last_updated | date_to_string }}{% endif %}</span><br />{% endif %}
+    {% for tag in page.tags %}
+    <span class="label" style="background:rgb({{ tag % 255 }})">{{ tag }}</span>
+    {% endfor %}
+  </div>
 </div>
 <div class="span8 content">
   <article class="padding10">
@@ -38,7 +43,7 @@ layout: default
 </div>
 
 <div class="span2">
-  <div id="related">
+  <div class="aside padding10 content">
     <h4>Related Posts</h4>
     <ul class="unstyled">
       {% for post in site.related_posts limit:5 %}
