--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <div class="span2">
   <div class="padding10 content aside">
-    {% if page.date %}<span class="muted">Posted on {{ page.date | date_to_string }}{% if page.last_updated %}, last updated on {{ page.last_updated | date_to_string }}{% endif %}</span><br />{% endif %}
+    {% if page.date %}<span class="muted">Posted on {{ page.date | date_to_string }}{% if page.last_updated %}, last updated on {{ page.last_updated | date_to_string }}{% endif %}</span><hr>{% endif %}
     {% for tag in page.tags %}
     <span class="label {{ tag }}">{{ tag }}</span>
     {% endfor %}
@@ -45,6 +45,7 @@ layout: default
 <div class="span2">
   <div class="aside padding10 content">
     <h4>Related Posts</h4>
+    <hr>
     <ul class="unstyled">
       {% for post in site.related_posts limit:5 %}
         <li><small><a href="{{ post.url }}">{{ post.title }}</a> <span class="muted"> posté le {{ post.date | date_to_string }}</span></small></li>
