--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <div class="span2">
   <div class="padding10 content aside">
-    {% if page.date %}<span class="muted">Posted on {{ page.date | date_to_string }}{% if page.last_updated %}, last updated on {{ page.last_updated | date_to_string }}{% endif %}</span><hr>{% endif %}
+    {% if page.date %}<small class="muted">Posté le {{ page.date | date_to_string }}{% if page.last_updated %}, last updated on {{ page.last_updated | date_to_string }}{% endif %}</small><hr>{% endif %}
     {% for tag in page.tags %}
     <span class="label {{ tag }}">{{ tag }}</span>
     {% endfor %}
@@ -13,6 +13,18 @@ layout: default
   <article class="padding10">
   {{ content }}
   </article>
+
+  <div class="row-fluid padding10">
+    <div class="span2">
+      <a href="https://twitter.com/share" class="twitter-share-button" data-via="florent_viel" data-lang="fr">Tweeter</a>
+    </div>
+    <div class="span2">
+      <div class="fb-like" data-send="false" data-layout="button_count" data-width="450" data-show-faces="false"></div>
+    </div>
+    <div class="span2">
+      <div class="g-plusone"></div>
+    </div>
+  </div>
 
   <div class="padding10">
     <ul class="pager">
@@ -48,7 +60,7 @@ layout: default
     <hr>
     <ul class="unstyled">
       {% for post in site.related_posts limit:5 %}
-        <li><small><a href="{{ post.url }}">{{ post.title }}</a> <span class="muted"> posté le {{ post.date | date_to_string }}</span></small></li>
+        <li><small><a href="{{ post.url }}">{{ post.title }}</a><br /><small class="muted"> posté le {{ post.date | date_to_string }}</small></small></li>
       {% endfor %}
     </ul>
   </div>
