--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,8 @@ layout: default
 ---
 <div class="span2">
   <div class="padding10 content aside">
-    {% if page.date %}<small class="muted">Posté le {{ page.date | date_to_string }}{% if page.last_updated %}, last updated on {{ page.last_updated | date_to_string }}{% endif %}</small><hr>{% endif %}
+    {% if page.date %}<small class="muted"><i class="icon-calendar"></i> Posté le {{ page.date | date_to_string }}{% if page.last_updated %}, last updated on {{ page.last_updated | date_to_string }}{% endif %}</small><hr>{% endif %}
+    <i class="icon-tags"></i> 
     {% for tag in page.tags %}
     <span class="label {{ tag }}">{{ tag }}</span>
     {% endfor %}
