--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,7 @@
     <link href='http://fonts.googleapis.com/css?family=Poly:400,400italic|Lobster+Two:400,700,400italic|Merriweather+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" media="screen" href="/stylesheets/screen.css" type="text/css" />
     <link rel="stylesheet" media="screen" href="/stylesheets/solarizedlight.css" type="text/css" />
+    <link href="/feed.xml" type="application/atom+xml" rel="alternate" title="Blog de Florent Viel">
     {% if site.feedburner %}
     <link href="http://feeds.feedburner.com/{{ site.feedburner.id }}" rel="alternate" title="{{ site.title }}" type="application/atom+xml" />
     {% endif %}
@@ -27,19 +28,16 @@
     {% endif %}
   </head>
   <body>
-      <header>
-        <div class="navbar navbar-inverse navbar-static-top">
-          <div class="navbar-inner">
-            <div class="container">
-             
+    <header>
+      <div class="navbar navbar-inverse navbar-static-top">
+        <div class="navbar-inner">
+          <div class="container">
             <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </a>
-             
             <a class="brand" href="/">{{ site.title }}</a>
-             
             <div class="nav-collapse collapse">
               <ul class="nav">
                 <li><a href="/a-propos.html">A propos</a></li>
@@ -53,26 +51,28 @@
                 </li>
                 <li><a href="http://florentviel.com" target="_blank">CV</a></li>
               </ul>
-            </div>
-             
+              <ul class="nav pull-right">
+                <li><a href="/feed.xml">RSS</a></li>
+              </ul>
             </div>
           </div>
-        </div>
-      </header>
-      <div class="container">
-        <div class="row">
-          <div class="span8 offset2 content">
-            {% if page.title %}
-            <h1 class="text-center">{{ page.title }}</h1>
-            <hr>
-            {% endif %}
-          </div>
-        </div>
-        <div class="row">
-          {{ content }}
         </div>
       </div>
-      <div id="fb-root"></div>
+    </header>
+    <div class="container">
+      <div class="row">
+        <div class="span8 offset2 content">
+          {% if page.title %}
+          <h1 class="text-center">{{ page.title }}</h1>
+          <hr>
+          {% endif %}
+        </div>
+      </div>
+      <div class="row">
+        {{ content }}
+      </div>
+    </div>
+    <div id="fb-root"></div>
     <script src="http://code.jquery.com/jquery.min.js"></script>
     <script src="/javascripts/bootstrap.min.js"></script>
     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
