--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -1,5 +1,5 @@
 /*
- * Bootstrap v2.3.0
+ * Bootstrap v2.3.1
  *
  * Copyright 2012 Twitter, Inc
  * Licensed under the Apache License v2.0
@@ -2100,7 +2100,7 @@ table th[class*="span"],
   *margin-right: .3em;
   line-height: 14px;
   vertical-align: text-top;
-  background-image: url(/images/glyphicons-halflings.png?1362135064);
+  background-image: url(/images/glyphicons-halflings.png?1363509079);
   background-position: 14px 14px;
   background-repeat: no-repeat;
   margin-top: 1px;
@@ -2124,11 +2124,11 @@ table th[class*="span"],
 .dropdown-submenu:focus > a > [class^="icon-"],
 .dropdown-submenu:hover > a > [class*=" icon-"],
 .dropdown-submenu:focus > a > [class*=" icon-"] {
-  background-image: url(/images/glyphicons-halflings-white.png?1362135064);
+  background-image: url(/images/glyphicons-halflings-white.png?1363509079);
 }
 
 .icon-glass {
-  background-position: 0      0;
+  background-position: 0 0;
 }
 
 .icon-music {
@@ -5823,7 +5823,7 @@ a.label:hover, a.label:focus, a.badge:hover, a.badge:focus {
 }
 
 /*
- * Bootstrap Responsive v2.3.0
+ * Bootstrap Responsive v2.3.1
  *
  * Copyright 2012 Twitter, Inc
  * Licensed under the Apache License v2.0
@@ -7087,7 +7087,7 @@ pre code {
 
 .aside {
   border-top: 5px solid #5e777d;
-  margin-bottom: 20px;
+  margin: 10px 0;
 }
 
 .label {
@@ -7130,4 +7130,8 @@ ul.unstyled li:last-child {
 .navbar-inverse .navbar-inner {
   background-image: url("/images/pw_maze_black.png");
   background-repeat: repeat;
+}
+
+.heading {
+  min-height: 132px;
 }
