--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -86,7 +86,9 @@
           <div class="content aside padding10">
             <h4>Florent Viel</h4>
             <hr>
-            <img src="http://www.gravatar.com/avatar/34df2fcf73fb6b987f3e2ea2bcf47802?s=220" class="img-polaroid" />
+            <div class="img-polaroid">
+              <img src="http://www.gravatar.com/avatar/34df2fcf73fb6b987f3e2ea2bcf47802?s=220" />
+            </div>
             <br /><br />
             <ul class="unstyled">
               <li><a href="https://github.com/luxifer" target="_blank"><i class="icon-github"></i> Github</a></li>
